# vs-rvrt

./: .gitattributes  .gitignore  .lfsconfig  MANIFEST.in  PKGBUILD  README.md  build_wheels.py  pyproject.toml  setup.py
aur/: .SRCINFO  PKGBUILD
test/: build.bat  build.sh  run_test.py  test.bat  test.sh
vsrvrt/: __init__.py  download_models.py  model_configs.py  rvrt_core.py  rvrt_filter.py
vsrvrt/_binary/: __init__.py
vsrvrt/_binary/manylinux_x86_64/: __init__.py
vsrvrt/_binary/manylinux_x86_64/cp314/: __init__.py
vsrvrt/_binary/win_amd64/: __init__.py
vsrvrt/models/: 001_RVRT_videosr_bi_REDS_30frames.pth  002_RVRT_videosr_bi_Vimeo_14frames.pth  003_RVRT_videosr_bd_Vimeo_14frames.pth  004_RVRT_videodeblurring_DVD_16frames.pth  005_RVRT_videodeblurring_GoPro_16frames.pth  006_RVRT_videodenoising_DAVIS_16frames.pth
vsrvrt/rvrt_src/models/: network_rvrt.py
vsrvrt/rvrt_src/models/op/: deform_attn.py
