[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vsrvrt"
version = "1.0.1"
description = "Vapoursynth plugin for RVRT (Recurrent Video Restoration Transformer)"
readme = "README.md"
license = "CC-BY-NC-4.0"
authors = [
    {name = "Lyra Vhess", email = "auxilliary.email@protonmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=1.9.1",
    "torchvision",
    "numpy",
    "requests",
    "tqdm",
    "einops",
    "vapoursynth>=60",
    "packaging",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/Lyra-Vhess/vs-rvrt"
Repository = "https://github.com/Lyra-Vhess/vs-rvrt"
Documentation = "https://github.com/Lyra-Vhess/vs-rvrt"

[project.entry-points."vapoursynth.plugins"]
vsrvrt = "vsrvrt:register_plugin"

[tool.setuptools.packages.find]
where = ["."]
include = ["vsrvrt*"]

[tool.setuptools.package-data]
vsrvrt = ["rvrt_src/models/op/*.cpp", "rvrt_src/models/op/*.cu"]

[tool.setuptools_scm]
write_to = "vsrvrt/_version.py"
fallback_version = "1.0.0"
