[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vsrvrt"
version = "1.1.0"
description = "Vapoursynth plugin for RVRT (Recurrent Video Restoration Transformer)"
readme = "README.md"
license = {text = "CC-BY-NC-4.0"}
authors = [
    {name = "Lyra Vhess", email = "auxilliary.email@protonmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Video",
]
requires-python = ">=3.12,<3.15"
dependencies = [
    "torch>=2.10.0",
    "torchvision",
    "numpy",
    "requests",
    "tqdm",
    "einops",
    "vapoursynth>=60",
    "packaging",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "twine",
    "build",
]

[project.urls]
Homepage = "https://github.com/Lyra-Vhess/vs-rvrt"
Repository = "https://github.com/Lyra-Vhess/vs-rvrt"
Documentation = "https://github.com/Lyra-Vhess/vs-rvrt"

[project.entry-points."vapoursynth.plugins"]
vsrvrt = "vsrvrt:register_plugin"

[project.scripts]
vsrvrt-download = "vsrvrt.download_models:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vsrvrt*"]

[tool.setuptools.package-data]
vsrvrt = [
    "rvrt_src/models/op/*.cpp",
    "rvrt_src/models/op/*.cu",
    "_binary/**/*.pyd",
    "_binary/**/*.so",
]

[tool.setuptools_scm]
write_to = "vsrvrt/_version.py"
fallback_version = "1.0.0"
